--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "seleniumjesttests",
   "version": "1.0.0",
   "description": "Testing Waterstones webshop with Selenium and Jest tests.",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "npx jest"
@@ -15,5 +16,15 @@
     "chromedriver": "^135.0.0",
     "jest": "^29.7.0",
     "selenium-webdriver": "^4.30.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.27.0",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
+    "@types/selenium-webdriver": "^4.1.28",
+    "babel-jest": "^29.7.0",
+    "ts-jest": "^29.3.1"
   }
 }
